[gd_scene load_steps=5 format=3 uid="uid://cu4d0tiud4jib"]

[ext_resource type="Script" path="res://scripts/NewPauseMenu.gd" id="1_p4nky"]
[ext_resource type="FontFile" uid="uid://barbabfpjkm12" path="res://assets/fonts/Holysweet-rgn4K.otf" id="2_p02i2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3ps4"]
bg_color = Color(0.909804, 0.682353, 0.815686, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_1ce4r"]
font = ExtResource("2_p02i2")
font_size = 103

[node name="NewPauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p4nky")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -276.0
offset_right = 354.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w3ps4")

[node name="Paused" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 25.0
offset_right = 113.0
offset_bottom = 74.0
grow_horizontal = 2
text = "Paused"
label_settings = SubResource("LabelSettings_1ce4r")

[node name="Resume2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -82.0
offset_right = 105.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_p02i2")
theme_override_font_sizes/font_size = 45
text = "resume
"

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -5.0
offset_right = 107.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_p02i2")
theme_override_font_sizes/font_size = 45
text = "RETRY"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 146.0
offset_right = 85.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_p02i2")
theme_override_font_sizes/font_size = 45
text = "Quit
"

[node name="how_to_play" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 67.0
offset_right = 150.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_p02i2")
theme_override_font_sizes/font_size = 45
text = "How to play"

[connection signal="pressed" from="Panel/Resume2" to="." method="_on_resume_2_pressed"]
[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_restart_button_pressed" flags=18]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_restart_button_pressed" flags=18]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Panel/how_to_play" to="." method="_on_how_to_play_pressed"]
